Name:                snap-logging-mongodb
Version:             0.1
Synopsis:            A simple module to log occess to mongodb
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Daniel Patterson
Maintainer:          dbp@riseup.net
-- Copyright:           
Category:            Snap
Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  hs-source-dirs: src
  -- Modules exported by the library.
  Exposed-modules:     
    Snap.Logging.MongoDB
    
  -- Packages needed in order to build this package.
  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    mtl >= 2 && < 3,
    snap-core == 0.4.*,
    text >= 0.11 && < 0.12,
    time >= 1.1 && < 1.3,
    transformers,
    bson >= 0.1 && < 0.2,
    snap-extension-mongodb >= 0.3 && < 0.4,
    snap-auth >= 0.1 && < 0.2,
    snap >= 0.4 && <= 0.5
      
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  